--- a/parts/request.jade
+++ b/parts/request.jade
@@ -95,7 +95,7 @@ template(name='request_view')
                         img.ui.rounded.image(src="{{c.url image_id gravity='face' crop='fit'}}")
                     .ui.header 
                         small posted by
-                    a.ui.header(href="/user/#{_author.username}") 
+                    a.ui.header(href="/u/#{_author.username}") 
                         img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
                         |#{_author.name}
                     .ui.header #{when}
