--- a/client/client.jade
+++ b/client/client.jade
@@ -42,7 +42,7 @@ template(name='front')
 
 template(name='layout')
     // +status
-    +nav
+    // +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
         +left_sidebar
