invert mode, remove circular and rounded inputs

--- a/client/client.jade
+++ b/client/client.jade
@@ -37,8 +37,14 @@ head
 template(name='front')
     +love
     .ui.basic.center.aligned.segment
-        a(href="/r/love")
+        a(href="/recipes")
+            i.big.food.icon
+        a(href="/love")
+            i.big.grey.heart.icon
+        a(href="/dao")
             i.big.grey.yin.yang.icon
+        a(href="/math")
+            i.big.calculator.icon
 
 template(name='layout')
     // +status
