--- a/client/love.jade
+++ b/client/love.jade
@@ -5,24 +5,24 @@ template(name='love')
             //     i.heart.icon
             //     |love
             .ui.labeled.large.input
-                .ui.big.basic.label l
+                .ui.big.label l
                 input.add_l(type='text' placeholder='...')
             .ui.labeled.large.input
-                .ui.big.basic.label o
+                .ui.big.label o
                 input.add_o(type='text' placeholder='...')
             .ui.labeled.large.input
-                .ui.big.basic.label v
+                .ui.big.label v
                 input.add_v(type='text' placeholder='...')
             .ui.labeled.large.input
-                .ui.big.basic.label e
+                .ui.big.label e
                 input.add_e(type='text' placeholder='...')
             .ui.labeled.input
-                .ui.large.basic.label 
+                .ui.large.label 
                     i.marker.grey.icon
                     |location
                 input.add_location(type='text' placeholder='...')
             .ui.labeled.input
-                .ui.large.basic.label 
+                .ui.large.label 
                     i.outline.user.grey.icon
                     |author
                 input.add_author(type='text' placeholder='...')
@@ -31,7 +31,7 @@ template(name='love')
                 .ui.button.submit
                     |submit
             else
-                .ui.basic.button.submit
+                .ui.button.submit
                     i.send.icon
                     |submit
         .sixteen.wide.center.aligned.column
@@ -56,64 +56,64 @@ template(name='love')
                     if l_results.count
                         .ui.inline.big.header l
                     each picked_l
-                        a.unpick_l.ui.black.circular.large.compact.button(href='#')
+                        a.unpick_l.ui.black.large.compact.button(href='#')
                             strong #{this}
                     each l_results
                         if name
-                            .ui.basic.circular.tiny.compact.button.pick_l #{name}
+                            .ui.tiny.compact.button.pick_l #{name}
                 .center.aligned.column
                     if o_results.count
                         .ui.inline.big.header o
                     each picked_o
-                        a.unpick_o.ui.black.circular.large.compact.button(href='#')
+                        a.unpick_o.ui.black.large.compact.button(href='#')
                             strong #{this}
                     each o_results
                         if name
-                            .ui.basic.circular.tiny.compact.button.pick_o #{name}
+                            .ui.tiny.compact.button.pick_o #{name}
                 .center.aligned.column
                     if v_results.count
                         .ui.inline.big.header v
                     each picked_v
-                        a.unpick_v.ui.black.circular.large.compact.button(href='#')
+                        a.unpick_v.ui.black.large.compact.button(href='#')
                             strong #{this}
                     each v_results
                         if name
-                            .ui.basic.circular.tiny.compact.button.pick_v #{name}
+                            .ui.tiny.compact.button.pick_v #{name}
                 .center.aligned.column
                     if e_results.count
                         .ui.inline.big.header e
                     each picked_e
-                        a.unpick_e.ui.black.circular.large.compact.button(href='#')
+                        a.unpick_e.ui.black.large.compact.button(href='#')
                             strong #{this}
                     each e_results
                         if name
-                            .ui.basic.circular.tiny.compact.button.pick_e #{name}
+                            .ui.tiny.compact.button.pick_e #{name}
                 .center.aligned.column
                     if location_results.count
                         i.big.marker.icon
                     each picked_locations
-                        a.unpick_location.ui.black.circular.large.compact.button(href='#')
+                        a.unpick_location.ui.black.large.compact.button(href='#')
                             strong #{this}
                     each location_results
                         if name
-                            .ui.basic.circular.tiny.compact.button.pick_location #{name}
+                            .ui.tiny.compact.button.pick_location #{name}
                 .center.aligned.column
                     if author_results.count
                         i.big.user.icon
                     each picked_authors
-                        a.unpick_author.ui.black.circular.large.compact.button(href='#')
+                        a.unpick_author.ui.black.large.compact.button(href='#')
                             strong #{this}
                     each author_results
                         if name
-                            .ui.basic.circular.tiny.compact.button.pick_author #{name}
+                            .ui.tiny.compact.button.pick_author #{name}
                 .center.aligned.column
                     if time_results.count
                         i.clock.big.icon
                     each picked_times
-                        a.unpick_time.ui.large.circular.large.compact.button(href='#')
+                        a.unpick_time.ui.large.large.compact.button(href='#')
                             strong #{this}
                     each time_results
-                        .ui.basic.circular.tiny.compact.button.pick_time #{name}
+                        .ui.tiny.compact.button.pick_time #{name}
             .ui.divider
             .ui.stackable.four.column.centered.grid.scrolling
                 each expressions
@@ -124,23 +124,23 @@ template(name='love')
                             .ui.tertiary.large.button #{v_value}
                             .ui.tertiary.large.button #{e_value}
                             div
-                            i.thumbs.up.link.outline.icon.upvote
-                            |#{points}
-                            i.thumbs.down.link.outline.icon.downvote
+                            // i.thumbs.up.link.outline.icon.upvote
+                            // |#{points}
+                            // i.thumbs.down.link.outline.icon.downvote
                             |#{when}
                             .ui.tiny.icon.input
                                 i.grey.tag.icon
                                 input.add_tag(type='text' placeholder='+')
                             each tags
                                 +flat_tag_picker
-                                // .ui.small.basic.circular.compact.button.pick_flat_tag #{this}
+                                // .ui.small.compact.button.pick_flat_tag #{this}
                             each timestamp_tags
-                                .ui.small.basic.circular.compact.button.pick_flat_time #{this}
+                                .ui.small.compact.button.pick_flat_time #{this}
                             i.grey.marker.icon
                             |#{location}
                             i.grey.user.outline.icon
                             |#{author}
-                            a.ui.icon.circular.button(href="/love/#{_id}/view")
+                            a.ui.icon.button(href="/love/#{_id}/view")
                                 i.chevron.right.icon
                                 
                                 
@@ -148,7 +148,7 @@ template(name='love')
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.basic.circular.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -157,7 +157,7 @@ template(name='tag_picker')
         //     small #{count}
         
 template(name='unpick_tag')
-    a.unpick_tag.ui.large.black.circular.compact.button(href='#')
+    a.unpick_tag.ui.large.black.compact.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -167,7 +167,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.basic.circular.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tiny.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
