--- a/client/s.css
+++ b/client/s.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: rgba(200,200,200,1) !important;
-  /*filter: invert(1) !important; */
+  filter: invert(1) !important; 
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -485,9 +485,9 @@ a.title, #title {
     /*border-radius: 10px !important;*/
 }
 
-/*.invert{*/
-/*  filter: invert(1) !important; */
-/*}*/
+img{
+  filter: invert(1) !important; 
+}
 .left.floated{
     margin:3px !important;
 }
@@ -619,7 +619,7 @@ a.title, #title {
 
 input {
     /*margin: 10px !important;*/
-    border-radius: 15px !important; 
+    /*border-radius: 15px !important; */
 }
 
 ::-webkit-scrollbar {
