tarot icon below

--- a/client/client.jade
+++ b/client/client.jade
@@ -37,14 +37,16 @@ head
 template(name='front')
     +love
     .ui.basic.center.aligned.segment
+        a(href="/tarot")
+            i.grey.big.moon.icon
         a(href="/recipes")
-            i.big.food.icon
+            i.grey.big.food.icon
         a(href="/love")
-            i.big.grey.heart.icon
+            i.grey.big.heart.icon
         a(href="/dao")
-            i.big.grey.yin.yang.icon
+            i.grey.big.yin.yang.icon
         a(href="/math")
-            i.big.calculator.icon
+            i.grey.big.calculator.icon
 
 template(name='layout')
     // +status
