--- a/client/group.jade
+++ b/client/group.jade
@@ -57,18 +57,18 @@ template(name='group')
                         each posts
                             .column.medscroll
                                 .content
-                                    a.ui.header.zoomer(href="/g/#{current_group}/p/#{_id}") #{title}
+                                    a.ui.header.zoomer(href="/#{current_group}/p/#{_id}") #{title}
                                     if image_id
-                                        a(href="/g/#{current_group}/p/#{_id}")
+                                        a(href="/#{current_group}/p/#{_id}")
                                             img.ui.fluid.rounded.zoomer.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                                     if image_link
-                                        a(href="/g/#{current_group}/p/#{_id}")
+                                        a(href="/#{current_group}/p/#{_id}")
                                             +image_link_view key='image_link' direct=true
                                     if youtube_id
                                         +youtube_view key='youtube_id' label='youtube id' direct=true
                                     if is_admin
                                         +text_edit key='group' label='slug' direct=true
-                                    a(href="/g/#{current_group}/p/#{_id}")
+                                    a(href="/#{current_group}/p/#{_id}")
                                         |!{content}
                                         if raw
                                             |!{raw}
@@ -119,7 +119,7 @@ template(name='post_view')
             .row 
                 .four.wide.column
                     .ui.segmen
-                        a.ui.large.icon.button(href="/g/#{group}")
+                        a.ui.large.icon.button(href="/#{group}")
                             i.chevron.left.icon
                         .ui.large.inline.header #{title}
                         // div
@@ -160,7 +160,7 @@ template(name='post_edit')
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
-                    a.ui.icon.green.big.button(href="/g/#{group}/p/#{_id}" title='save')
+                    a.ui.icon.green.big.button(href="/#{group}/p/#{_id}" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
