invert youtube, removal round

--- a/client/client.jade
+++ b/client/client.jade
@@ -45,8 +45,10 @@ template(name='front')
             i.grey.big.heart.icon
         a(href="/dao")
             i.grey.big.yin.yang.icon
-        a(href="/math")
+        a(href="/discrete")
             i.grey.big.calculator.icon
+        a(href="/avery")
+            i.grey.big.beer.icon
 
 template(name='layout')
     // +status
