--- a/client/watson.jade
+++ b/client/watson.jade
@@ -101,9 +101,9 @@ template(name='doc_emotion_small')
     // .spacer
 
 template(name='call_watson')
-    button.ui.large.icon.circular.button.autotag
+    button.ui.large.circular.button.autotag
         i.dna.icon
-        // |autotag
+        |autotag
     if page_doc.watson 
         i.checkmark.icon
 // template(name='call_reddit')
