--- a/client/s.css
+++ b/client/s.css
@@ -339,7 +339,7 @@ input
 
 
 .rounded {
-  /*border-radius: 5px !important; */
+  border-radius: 15px !important; 
   /*padding: 10px !important; */
 }
 
@@ -485,7 +485,7 @@ a.title, #title {
     /*border-radius: 10px !important;*/
 }
 
-img{
+img, .rounded, .embed {
   filter: invert(1) !important; 
 }
 .left.floated{
