--- a/client/client.jade
+++ b/client/client.jade
@@ -21,6 +21,7 @@ head
 
     // script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
 
+    script(src="https://www.moneybutton.com/moneybutton.js")
 
 
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css")
@@ -51,8 +52,6 @@ template(name='front')
             i.grey.big.beer.icon
 
 template(name='layout')
-    // +status
-    // +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
         // +left_sidebar
@@ -60,7 +59,7 @@ template(name='layout')
                 
         #main_area.global_container.pusher
             +yield
-    
+    +money_button
     // .ui.bottom.attached.pushable.segment
     //     #main_area.pusher(class=currentUser.invert_class)
 
