add watson full

--- a/client/watson.jade
+++ b/client/watson.jade
@@ -106,18 +106,15 @@ template(name='call_watson')
         |autotag
     if page_doc.watson 
         i.checkmark.icon
-// template(name='call_reddit')
-//     button.ui.large.icon.circular.button.call_reddit
-//         i.reddit.icon
-//         // |autotag
-//     if rd
-//         i.checkmark.icon
+
 template(name='autotag')
     button.ui.large.icon.circular.button.autotag
         i.dna.icon
         // |autotag
         if watson 
             i.checkmark.icon
+            
+            
 // template(name='call_tone')
 //     button.ui.icon.large.circular.button.call
 //         i.smile.icon
@@ -133,7 +130,7 @@ template(name='call_visual')
 template(name='keywords')
     .ui.small.grey.header 
         |#{watson.keywords.length} keywords
-    .ui.three.column.stackable.grid
+    .ui.two.column.stackable.grid
         each watson.keywords
             .ui.column
                 span.large120(class="{{calculated_size 'relevance'}}" title="{{ to_percent relevance }}% relevant") #{text}
@@ -163,7 +160,7 @@ template(name='keywords')
 template(name='entities')
     .ui.grey.header 
         |#{watson.entities.length} entities
-    .ui.three.column.stackable.grid
+    .ui.two.column.stackable.grid
         each watson.entities
             .ui.column
                 .ui.small.grey.header #{type}
@@ -221,17 +218,6 @@ template(name='concepts')
         each watson.concepts
             div(class="{{calculated_size 'relevance'}}" title="{{to_percent relevance}}% relevant")
                 a(href=dbpedia_resource target='_blank') #{text}
-
-
-template(name='visual_classes')
-    //- .ui.small.grey.header 
-    //-     |#{visual_classes.length} visual classes
-    .ui.list
-        each visual_classes
-            .item
-                div(class="{{calculated_size 'score'}}" title="{{to_percent score}}%") #{class}
-                // small {{to_percent score}}%
-                small #{type_hierarchy}
 
 
 
