--- a/client/group.jade
+++ b/client/group.jade
@@ -139,7 +139,7 @@ template(name='post_view')
     
                         +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                         +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                .twelve.wide.column.scrolling
+                .eight.wide.column.scrolling
                     if image_link
                         a(href="/#{group}")
                             +image_link_view key='image_link' direct=true
@@ -156,8 +156,10 @@ template(name='post_view')
                     .spacer
                     .spacer
                     +comments
+                .four.wide.column.scrolling
                     if watson
                         +watson_view
+                        +watson_full
 
 template(name='post_edit')
     with doc_by_id
