--- a/client/group.jade
+++ b/client/group.jade
@@ -33,14 +33,7 @@ template(name='group')
             else
                 i.big.grey.loading.yin.yang.icon
         
-            // img(src=data.banner_img)
-            // img(src=banner_background_image)
-            // a.ui.compact.icon.button(href="/reddit")
-            //     i.large.chevron.left.grey.icon
-            //     i.large.reddit.icon
-            //     // img.ui.mini.inline.image(src=icon_img)
-            // img.get_info.shadowed.ui.inline.image(src=logo_url )
-            .ui.inline.header.get_info #{data.display_name}
+            .ui.inline.header.get_info #{current_group}
             div
             .ui.inline.header #{post_count}
             if skv_is 'sort_direction' 1
@@ -49,27 +42,6 @@ template(name='group')
             else
                 .ui.icon.compact.basic.circular.button.sort_up
                     i.caret.up.icon
-            // if skv_is 'view_bounties' 1
-            //     .ui.compact.black.button.unview_bounties
-            //         i.hand.holding.heart.icon
-            //         | bounties
-            // else
-            //     .ui.compact.button.view_bounties
-            //         i.hand.holding.heart.icon
-            //         | bounties
-            // if skv_is 'view_unanswered' 1
-            //     .ui.compact.black.button.unview_unanswered
-            //         i.checkmark.icon
-            //         | unanswered
-            // else
-            //     .ui.compact.button.view_unanswered
-            //         i.question.icon
-            //         | unanswered
-            // i.big.fire.link.icon
-            // .ui.compact.small.button.limit_1
-            //     |1
-            // .ui.compact.small.button.limit_10
-            //     |10
             .ui.icon.compact.small.circular.basic.button.sort_created(class=sort_created_class)
                 i.clock.icon
             .ui.icon.compact.small.circular.basic.button.sort_ups(class=sort_ups_class)
@@ -98,48 +70,17 @@ template(name='group')
                 .ui.icon.compact.circular.basic.button.set_list(class=list_class)
                     i.list.large.icon
             .scrolling
-                if sub_docs.count
+                if posts.count
                     if skv_is 'view_layout' 'grid'
                         .ui.stackable.three.column.grid 
-                            each sub_docs
+                            each posts
                                 +post_card_small
                     else if skv_is 'view_layout' 'list'
-                        each sub_docs
+                        each posts
                             +doc_item
                 else
                     .ui.center.aligned.basic.segment
                         i.massive.grey.loading.yin.yang.icon
-            
-            .ui.stackable.four.column.centered.grid.scrolling
-                if posts.count
-                    each posts
-                        .column.medscroll
-                            .content
-                                a.ui.header.zoomer(href="/#{current_group}/p/#{_id}") #{title}
-                                if image_id
-                                    a(href="/#{current_group}/p/#{_id}")
-                                        img.ui.fluid.rounded.zoomer.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                                if image_link
-                                    a(href="/#{current_group}/p/#{_id}")
-                                        +image_link_view key='image_link' direct=true
-                                if youtube_id
-                                    +youtube_view key='youtube_id' label='youtube id' direct=true
-                                if is_admin
-                                    +text_edit key='group' label='slug' direct=true
-                                a(href="/#{current_group}/p/#{_id}")
-                                    |!{content}
-                                    if raw
-                                        |!{raw}
-                                each tags
-                                    +flat_tag_selector
-                                if is_admin 
-                                    +remove_button
-                                a.ui.circular.icon.button(href="/#{group}/p/#{_id}")
-                                    i.right.chevron.icon
-                                    // .ui.small.label #{this}
-                            // .ui.divider
-                else
-                    i.massive.grey.loading.yin.yang.icon
         .four.wide.column.scrolling.seg
             // +alpha
             i.big.marker.grey.icon(title='where tags')
@@ -357,4 +298,196 @@ template(name='post_edit')
                     +html_edit key='content' label='content' direct=true
                     +image_link_edit key='image_link' direct=true
                     +youtube_edit key='youtube_id' label='youtube id' direct=true
+        
+        
+        
+        
+        
+        
+        
+        
+
+   
+   
+template(name='post_card_small')
+    .center.aligned.column.medscroll
+        .content
+            a.ui.header.zoomer(href="/#{group}/p/#{_id}") #{title}
+            if image_id
+                a(href="/#{group}/p/#{_id}")
+                    img.ui.fluid.rounded.zoomer.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+            if image_link
+                a(href="/#{group}/p/#{_id}")
+                    +image_link_view key='image_link' direct=true
+            if youtube_id
+                +youtube_view key='youtube_id' label='youtube id' direct=true
+            if is_admin
+                +text_edit key='group' label='slug' direct=true
+            a(href="/#{group}/p/#{_id}")
+                |!{content}
+                if raw
+                    |!{raw}
+            each tags
+                +flat_tag_selector
+            if in_dev
+                +print_this
+                +remove_button
+            a.ui.circular.icon.button(href="/#{group}/p/#{_id}")
+                i.right.chevron.icon
+    
+        // .ui.stackable.equal.width.compact.grid
+        //     .row
+        if embed
+            span.rounded.full
+                |!{embed}
+            div
+        else if is_image
+            a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
+        else if watson.metadata.image.length
+            a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                img.ui.fluid.zoomer.rounded.image.toggle_view(src=watson.metadata.image)
+        else if data.thumbnail_width
+            a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                img.ui.fluid.zoomer.rounded.image.zoomer(src=data.thumbnail)    
+        // // else if data.thumbnail.length
+        //     .column
+        //         a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+        //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
+        .content
+            a.ui.center.aligned.header.view_post.zoomer(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                |!{data.title} 
+            | #{data.ups}
+            i.thumbs.up.outline.grey.icon
+            | #{data.num_comments}
+            i.comment.outline.grey.icon
+            i.clock.icon
+            each time_tags
+                .ui.tiny.basic.circular.label #{this}
+            a.ui.basic.label(href="/u/#{data.author}")
+                |#{data.author}
+            if watson
+                +doc_emotion_small        
+                
+                // span.inline.content
+                // span.inline.content
+            if in_dev
+                +print_this
+   
+template(name='doc_item')                  
+    .ui.ite.seg
+        unless skv_is 'view_detail' true
+            // .ui.stackable.equal.width.compact.grid
+            //     .row
+            if embed
+                span.rounded.full
+                    |!{embed}
+                div
+            else if is_image
+                .column
+                    a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                        img.ui.fluid.rounded.image.toggle_view(src=data.url)
+            else if watson.metadata.image.length
+                .column
+                    a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                        img.ui.rounded.inline.image.toggle_view(src=watson.metadata.image)
+            else if data.thumbnail.length
+                .column
+                    a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                        img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
+            // else if data.thumbnail.length
+            //     .column
+            //         a.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+            //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
+            // .column
+            a.ui.inline.header.view_post.zoomer(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                strong #{data.ups}:
+                |!{data.title} 
+                // span.inline.content
+            if watson.analyzed_text
+                // .spacer
+                a.f11.view_post(href="/r/#{group}/post/#{_id}" class=post_header_class)
+                    |{{trunc watson.analyzed_text}}...
+            .ui.label 
+                i.clock.icon
+                |{{ufrom data.created}}
+                small ({{long_date data.created}})
+            .ui.label(title='domain') #{data.domain}
+            // each tags
+            //     +flat_sub_tag_selector
+            if in_dev
+                +print_this
+            // if watson
+            //     +doc_emotion_small
+            // if skv_is 'view_detail' true
+            // a.ui.header.view_post.zoomer(href="/r/#{group}/post/#{_id}" class=post_header_class)
+            //     strong #{data.ups}:
+            //     |!{data.title} 
+            // span.inline.content
+                    
+            a.say.goto_post(href="/r/#{group}/post/#{_id}" class=post_header_class) !{data.body}
+            a.say(href="/r/#{group}/post/#{_id}" class=post_header_class) !{data.html}
+            // .spacer
+            // if parsed_selftext_html
+            //     .ui.segment
+            //         |!{parsed_selftext_html}
+            // if data.selftext
+            //     // .ui.segment
+            //     .ui.segment.say
+            //         |{{#markdown}} {{data.selftext}} {{/markdown}}
+            // else if data.body
+            //     div
+            //     .ui.segment.say
+            //         |{{nl2br data.body}}
+            // if data.body_html
+            //     div
+            //     a.pointer.say(href="/r/#{group}/post/#{_id}" class=post_header_class)
+            //         |!{data.body_html}
+            
+            each tags
+                +flat_sub_tag_selector
+            // if watson
+            //     +doc_emotion_small
+            a.ui.inline.header(href="/u/#{data.author}")
+                |#{data.author}
+    
+
+
+template(name='sub_tag_selector')
+    // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.compact.tertiary.circular.button.zoomer.select_sub_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            if term.watson.metadata.image
+                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        strong #{name}
+        // if in_dev
+        //     small #{count}
+        
+template(name='sub_unselect_tag')
+    a.unselect_sub_tag.ui.active.compact.basic.circular.button(href='#')
+        if term
+            if term.watson.metadata.image
+                img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
+        strong #{this}
+
+        
+        
+template(name='flat_sub_tag_selector')
+    // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.compact.basic.circular.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            if term.watson.metadata.image
+                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        strong #{this}
+        // if in_dev
+        //     small #{count}
+// template(name='flat_sub_ruser_tag_selector')
+//     // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+//     .ui.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+//         if term
+//             if term.watson.metadata.image
+//                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+//         strong #{this}
+//         // if in_dev
+//         //     small #{count}
         
