--- a/client/rpage.jade
+++ b/client/rpage.jade
@@ -2,7 +2,7 @@ template(name='reddit_page')
     with current_doc
         .ui.stackable.grid
             .twelve.wide.column
-                a.ui.basic.button.goto_sub(href="/r/#{data.subreddit}")
+                a.ui.basic.button.goto_sub(href="/#{data.subreddit}")
                     i.chevron.left.icon
                     |#{data.subreddit}
                 span.ui.pointer.text.f13.zoomer(class=post_header_class)
@@ -23,7 +23,7 @@ template(name='reddit_page')
                 .scrolling
                     // if skv_is 'view_section' 'main'
                     if is_image
-                        a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                        a.view_post(href="/#{subreddit}/post/#{_id}" class=post_header_class)
                             img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
                     else if data.is_reddit_media_domain
                         img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
