--- a/client/rpage.jade
+++ b/client/rpage.jade
@@ -122,7 +122,7 @@ template(name='reddit_page')
                 .ui.small.inline.header #{data.num_crossposts} crossposts
                 |#{tags.length}
                 each tags
-                    +flat_sub_tag_selector
+                    +flat_tag_picker
                 
                 
 template(name='rcomments_tab')                
@@ -151,7 +151,7 @@ template(name='rcomment')
                 |{{#markdown}} {{data.body}} {{/markdown}}
             .actions
                 each tags 
-                    +flat_sub_tag_selector
+                    +flat_tag_picker
                     // .ui.tiny.basic.label #/{this}
         if data.replies.data.children
             .ui.grid
