--- a/client/s.css
+++ b/client/s.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: rgba(200,200,200,1) !important;
-  filter: invert(1) !important; 
+  filter: invert(.99) !important; 
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -619,7 +619,7 @@ img, .rounded, .embed, iframe, .text {
 
 input {
     /*margin: 10px !important;*/
-    /*border-radius: 15px !important; */
+    border-radius: 10px !important; 
 }
 
 ::-webkit-scrollbar {
