--- a/client/love.jade
+++ b/client/love.jade
@@ -44,13 +44,13 @@ template(name='love')
                 //     a#clear_tags.ui.black.invert.icon.compact.button.pick_term
                 //         i.remove.icon
                 each picked_tags
-                    +unpick_tag
+                    +love_unpick_tag
             // .ui.icon.input
             //     i.search.icon
             //     input.search_group_tag(type='text' value=group_query)
             each result_tags
                 // .ui.label #{this}
-                +tag_picker
+                +love_tag_picker
             .ui.stackable.four.column.centered.grid
                 .center.aligned.column
                     if l_results.count
@@ -132,7 +132,7 @@ template(name='love')
                             //     i.grey.tag.icon
                             //     input.add_tag(type='text' placeholder='+')
                             // each tags
-                            //     +flat_tag_picker
+                            //     +flat_love_tag_picker
                                 // .ui.small.compact.button.pick_flat_tag #{this}
                             // each timestamp_tags
                             //     .ui.small.compact.button.pick_flat_time #{this}
@@ -148,7 +148,7 @@ template(name='love')
                                 
                                 
                                 
-template(name='tag_picker')
+template(name='love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
     .ui.compact.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
@@ -158,8 +158,8 @@ template(name='tag_picker')
         // if in_dev
         //     small #{count}
         
-template(name='unpick_tag')
-    a.unpick_tag.ui.large.black.compact.button(href='#')
+template(name='love_unpick_tag')
+    a.love_unpick_tag.ui.large.black.compact.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -167,7 +167,7 @@ template(name='unpick_tag')
 
         
         
-template(name='flat_tag_picker')
+template(name='flat_love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
     .ui.compact.tiny.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
